refactor: modularize version system and improve documentation

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 bin/
 test-output/
 .dev-go-source/
+.dev-mod-cache/
+.dev-build-cache/
 instrumented/
 
 # Example app artifacts (both dev and docker)
