fix: docker workflow Go version fetching

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,74 +1,89 @@
 name: Docker Build and Publish
 
 on:
-    push:
-        branches:
-            - main
-        tags:
-            - "v*.*.*"
+  push:
+    branches:
+      - main
+    tags:
+      - "v*.*.*"
 
 env:
-    REGISTRY: ghcr.io
-    IMAGE_NAME: ${{ github.repository }}
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-    build-and-push:
-        runs-on: ubuntu-latest
-        permissions:
-            contents: read
-            packages: write
+  load-versions:
+    runs-on: ubuntu-latest
+    outputs:
+      versions: ${{ steps.set-versions.outputs.versions }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-        strategy:
-            matrix:
-                go-version: ["1.19", "1.20", "1.21", "1.22", "1.23", "1.24"]
+      - name: Load Go versions
+        id: set-versions
+        run: |
+          VERSIONS=$(jq -c '.versions' .github/go-versions.json)
+          echo "versions=$VERSIONS" >> $GITHUB_OUTPUT
 
-        steps:
-            - name: Checkout repository
-              uses: actions/checkout@v4
-              with:
-                  fetch-depth: 0
+  build-and-push:
+    needs: load-versions
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
 
-            - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v3
+    strategy:
+      matrix:
+        go-version: ${{ fromJson(needs.load-versions.outputs.versions) }}
 
-            - name: Log in to GitHub Container Registry
-              uses: docker/login-action@v3
-              with:
-                  registry: ${{ env.REGISTRY }}
-                  username: ${{ github.actor }}
-                  password: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-            - name: Extract framework version
-              id: framework-version
-              run: |
-                  if [[ "${{ github.ref }}" == refs/tags/* ]]; then
-                    VERSION=${GITHUB_REF#refs/tags/}
-                  else
-                    VERSION=$(git describe --tags --always --dirty 2>/dev/null || echo "dev")
-                  fi
-                  echo "version=$VERSION" >> $GITHUB_OUTPUT
-                  echo "Framework version: $VERSION"
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-            - name: Generate Docker metadata
-              id: meta
-              uses: docker/metadata-action@v5
-              with:
-                  images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-                  tags: |
-                      type=raw,value=go${{ matrix.go-version }}-${{ steps.framework-version.outputs.version }}
-                      type=raw,value=go${{ matrix.go-version }},enable=${{ github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') }}
-                      type=raw,value=${{ steps.framework-version.outputs.version }},enable=${{ matrix.go-version == '1.24' && startsWith(github.ref, 'refs/tags/') }}
-                      type=raw,value=latest,enable=${{ matrix.go-version == '1.24' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')) }}
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-            - name: Build and push Docker image
-              uses: docker/build-push-action@v5
-              with:
-                  context: .
-                  file: ./build/Dockerfile
-                  push: true
-                  tags: ${{ steps.meta.outputs.tags }}
-                  labels: ${{ steps.meta.outputs.labels }}
-                  build-args: |
-                      GO_VERSION=${{ matrix.go-version }}
-                  cache-from: type=gha
-                  cache-to: type=gha,mode=max
+      - name: Extract framework version
+        id: framework-version
+        run: |
+          if [[ "${{ github.ref }}" == refs/tags/* ]]; then
+            VERSION=${GITHUB_REF#refs/tags/}
+          else
+            VERSION=$(git describe --tags --always --dirty 2>/dev/null || echo "dev")
+          fi
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "Framework version: $VERSION"
+
+      - name: Generate Docker metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=raw,value=go${{ matrix.go-version }}-${{ steps.framework-version.outputs.version }}
+            type=raw,value=go${{ matrix.go-version }},enable=${{ github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') }}
+            type=raw,value=${{ steps.framework-version.outputs.version }},enable=${{ matrix.go-version == '1.24.9' && startsWith(github.ref, 'refs/tags/') }}
+            type=raw,value=latest,enable=${{ matrix.go-version == '1.24.9' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/')) }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./build/Dockerfile
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          build-args: |
+            GO_VERSION=${{ matrix.go-version }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
