--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -20,7 +20,7 @@ jobs:
         uses: lewagon/wait-on-check-action@v1.3.1
         with:
           ref: ${{ github.sha }}
-          check-name: "Quality Gate"
+          check-name: "CI"
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           wait-interval: 10
 
