--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,13 +6,19 @@ on:
   pull_request:
     branches: [main]
 
+# Conditions
+# | Condition                    | Applies To | Effect                                |
+# |------------------------------|------------|---------------------------------------|
+# | `[skip-ci]` in commit/PR     | All jobs   | Skips CI when used in each job's `if` |
+
 jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
+    if: ${{ !contains(github.event.head_commit.message || github.event.pull_request.title || '', '[skip-ci]') }}
     strategy:
       matrix:
-        go-version: ["1.21", "1.22", "1.23"]
+        go-version: ["1.21.13", "1.22.12", "1.23.12"]
 
     steps:
       - name: Checkout code
@@ -40,6 +46,7 @@ jobs:
   lint:
     name: Lint
     runs-on: ubuntu-latest
+    if: ${{ !contains(github.event.head_commit.message || github.event.pull_request.title || '', '[skip-ci]') }}
 
     steps:
       - name: Checkout code
@@ -48,7 +55,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: "1.23"
+          go-version: "1.23.12"
 
       - name: Install staticcheck
         run: go install honnef.co/go/tools/cmd/staticcheck@latest
@@ -68,6 +75,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    if: ${{ !contains(github.event.head_commit.message || github.event.pull_request.title || '', '[skip-ci]') }}
 
     steps:
       - name: Checkout code
@@ -76,7 +84,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: "1.23"
+          go-version: "1.23.12"
 
       - name: Build install-instrumentation
         run: go build -v ./cmd/install-instrumentation
@@ -90,6 +98,7 @@ jobs:
     name: Quality Gate
     runs-on: ubuntu-latest
     needs: [test, lint, build]
+    if: ${{ !contains(github.event.head_commit.message || github.event.pull_request.title || '', '[skip-ci]') }}
 
     steps:
       - name: All checks passed
