--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -169,6 +169,7 @@ jobs:
 
       - name: Create and push versioned manifest
         run: |
+          docker manifest rm ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:go${{ matrix.go-version }}-${{ steps.tag-suffix.outputs.suffix }} || true
           docker manifest create \
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:go${{ matrix.go-version }}-${{ steps.tag-suffix.outputs.suffix }} \
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:go${{ matrix.go-version }}-${{ steps.tag-suffix.outputs.suffix }}-amd64 \
@@ -178,6 +179,7 @@ jobs:
       - name: Create and push latest Go manifest
         if: matrix.go-version == '1.24.9'
         run: |
+          docker manifest rm ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.tag-suffix.outputs.suffix }} || true
           docker manifest create \
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.tag-suffix.outputs.suffix }} \
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:go${{ matrix.go-version }}-${{ steps.tag-suffix.outputs.suffix }}-amd64 \
