--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -22,6 +22,8 @@ jobs:
     outputs:
       versions: ${{ steps.set-versions.outputs.versions }}
       framework-version: ${{ steps.framework-version.outputs.version }}
+      tag-suffix: ${{ steps.tag-suffix.outputs.suffix }}
+      latest-go-version: ${{ steps.latest-version.outputs.version }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -37,13 +39,29 @@ jobs:
       - name: Extract framework version
         id: framework-version
         run: |
-          if [[ "${{ github.ref }}" == refs/tags/* ]]; then
+          if [[ "${{ github.event_name }}" == "push" && "${{ github.ref }}" == refs/tags/* ]]; then
             VERSION=${GITHUB_REF#refs/tags/}
           else
             VERSION="dev"
           fi
           echo "version=$VERSION" >> $GITHUB_OUTPUT
           echo "Framework version: $VERSION"
+
+      - name: Determine tag suffix
+        id: tag-suffix
+        run: |
+          if [[ "${{ github.event_name }}" == "push" && "${{ github.ref }}" == refs/tags/* ]]; then
+            echo "suffix=${{ steps.framework-version.outputs.version }}" >> $GITHUB_OUTPUT
+          else
+            echo "suffix=edge" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Determine latest Go version
+        id: latest-version
+        run: |
+          LATEST=$(echo '${{ steps.set-versions.outputs.versions }}' | jq -r '.[]' | sort -V | tail -n1)
+          echo "version=$LATEST" >> $GITHUB_OUTPUT
+          echo "Latest Go version: $LATEST"
 
   build-amd64:
     needs: load-versions
@@ -70,15 +88,6 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Determine tag suffix
-        id: tag-suffix
-        run: |
-          if [[ "${{ github.ref }}" == refs/tags/* ]]; then
-            echo "suffix=${{ needs.load-versions.outputs.framework-version }}" >> $GITHUB_OUTPUT
-          else
-            echo "suffix=edge" >> $GITHUB_OUTPUT
-          fi
-
       - name: Build and push AMD64
         uses: docker/build-push-action@v5
         with:
@@ -86,7 +95,7 @@ jobs:
           file: ./build/Dockerfile
           platforms: linux/amd64
           push: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:go${{ matrix.go-version }}-${{ steps.tag-suffix.outputs.suffix }}-amd64
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:go${{ matrix.go-version }}-${{ needs.load-versions.outputs.tag-suffix }}-amd64
           build-args: |
             GO_VERSION=${{ matrix.go-version }}
           cache-from: type=gha,scope=amd64-${{ matrix.go-version }}
@@ -117,15 +126,6 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Determine tag suffix
-        id: tag-suffix
-        run: |
-          if [[ "${{ github.ref }}" == refs/tags/* ]]; then
-            echo "suffix=${{ needs.load-versions.outputs.framework-version }}" >> $GITHUB_OUTPUT
-          else
-            echo "suffix=edge" >> $GITHUB_OUTPUT
-          fi
-
       - name: Build and push ARM64
         uses: docker/build-push-action@v5
         with:
@@ -133,7 +133,7 @@ jobs:
           file: ./build/Dockerfile
           platforms: linux/arm64
           push: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:go${{ matrix.go-version }}-${{ steps.tag-suffix.outputs.suffix }}-arm64
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:go${{ matrix.go-version }}-${{ needs.load-versions.outputs.tag-suffix }}-arm64
           build-args: |
             GO_VERSION=${{ matrix.go-version }}
           cache-from: type=gha,scope=arm64-${{ matrix.go-version }}
@@ -151,6 +151,9 @@ jobs:
         go-version: ${{ fromJson(needs.load-versions.outputs.versions) }}
 
     steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -158,26 +161,17 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Determine tag suffix
-        id: tag-suffix
-        run: |
-          if [[ "${{ github.ref }}" == refs/tags/* ]]; then
-            echo "suffix=${{ needs.load-versions.outputs.framework-version }}" >> $GITHUB_OUTPUT
-          else
-            echo "suffix=edge" >> $GITHUB_OUTPUT
-          fi
-
       - name: Create and push versioned manifest
         run: |
           docker buildx imagetools create \
-            -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:go${{ matrix.go-version }}-${{ steps.tag-suffix.outputs.suffix }} \
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:go${{ matrix.go-version }}-${{ steps.tag-suffix.outputs.suffix }}-amd64 \
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:go${{ matrix.go-version }}-${{ steps.tag-suffix.outputs.suffix }}-arm64
+            -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:go${{ matrix.go-version }}-${{ needs.load-versions.outputs.tag-suffix }} \
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:go${{ matrix.go-version }}-${{ needs.load-versions.outputs.tag-suffix }}-amd64 \
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:go${{ matrix.go-version }}-${{ needs.load-versions.outputs.tag-suffix }}-arm64
 
-      - name: Create and push latest Go manifest
-        if: matrix.go-version == '1.24.9'
+      - name: Create and push latest manifest
+        if: ${{ matrix.go-version == needs.load-versions.outputs.latest-go-version }}
         run: |
           docker buildx imagetools create \
-            -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.tag-suffix.outputs.suffix }} \
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:go${{ matrix.go-version }}-${{ steps.tag-suffix.outputs.suffix }}-amd64 \
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:go${{ matrix.go-version }}-${{ steps.tag-suffix.outputs.suffix }}-arm64
+            -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest \
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:go${{ needs.load-versions.outputs.latest-go-version }}-${{ needs.load-versions.outputs.tag-suffix }}-amd64 \
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:go${{ needs.load-versions.outputs.latest-go-version }}-${{ needs.load-versions.outputs.tag-suffix }}-arm64
