refactor(instrumentation): improve unsafe wrappers, logger, and preprocessor

--- a/examples/app/go.mod.template
+++ b/examples/app/go.mod.template
@@ -2,4 +2,7 @@ module example.com/example/app
    
 go {{GO_VERSION}}
 
-require gopkg.in/yaml.v3 v3.0.1
+require (
+	golang.org/x/sys v0.15.0
+	gopkg.in/yaml.v3 v3.0.1
+)
